Fix accessibility issues

--- a/lang/lang_EN.json
+++ b/lang/lang_EN.json
@@ -7,7 +7,7 @@
     "h1": "create an<br> account",
     ".page-email h2": "What's your email?",
     ".page-email>a": "Have you seen original page?",
-    ".check-info": "Have you ever played Valorant? It's really, really awesome game!",
+    ".check-info": "Have you ever played Valorant? It's a really, really awesome game!",
     ".form-socials small": "check out my other accounts:",
     ".page-birthday h2": "When were you born?",
     ".birthday-wrap > p": "Let's find out how old you are.",
