Add RWD file, fix style.css

--- a/lang/lang_EN.json
+++ b/lang/lang_EN.json
@@ -4,7 +4,7 @@
     "#privacy": "privacy notice",
     "#terms-of-service": "terms of service",
     ".docs p": "© 2020 RIOT GAMES. ALL RIGHTS RESERVED.",
-    "h1": "create an<br> account",
+    "h1": "create an account",
     ".page-email h2": "What's your email?",
     ".page-email>a": "Have you seen original page?",
     ".check-info": "Have you ever played Valorant? It's a really, really awesome game!",
@@ -21,7 +21,7 @@
     "#pass-length span":"Password is at least 8 characters long.",
     "#pass-number span":"Password contains at least one letter or number.",
     "#confirm-password+.js-label":"confirm password",
-    ".message-wrap h2": "Any questions/feedback?",
+    ".message-wrap h2": "Any questions or feedback?",
     ".message-wrap>p": "Feel free to write them below, i'll respond as soon as possible.",
     ".message-wrap .js-label": "message",
     ".submit-wrap h2": "Thanks for checking it out!",
