--- a/lang/lang_PL.json
+++ b/lang/lang_PL.json
@@ -4,7 +4,7 @@
     "#privacy": "polityka prywatności",
     "#terms-of-service": "warunki świadczenia usług",
     ".docs p": "© 2020 RIOT GAMES. WSZYSTKIE PRAWA ZASTRZEŻONE.",
-    "h1": "stwórz<br> konto",
+    "h1": "stwórz konto",
     ".page-email h2": "Jaki jest twój e-mail?",
     ".page-email>a": "Widziałeś oryginalną stronę?",
     ".check-info": "Czy grałeś już w Valorant? To na prawdę świetna gra, polecam!",
@@ -21,7 +21,7 @@
     "#pass-length span":"Minimalna liczba znaków: 8.",
     "#pass-number span":"Hasło musi zawierać przynajmniej jedną literę lub cyfrę.",
     "#confirm-password+.js-label":"powtórz hasło",
-    ".message-wrap h2": "Jakieś pytania/feedback?",
+    ".message-wrap h2": "Jakieś pytania albo feedback?",
     ".message-wrap>p": "Napisz je poniżej, odezwę się kiedy tylko będę mógł.",
     ".message-wrap .js-label": "wiadomość",
     ".submit-wrap h2": "Dzięki za dotrwanie do końca!",
